terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "devops_landing_saas" {
  ami           = "ami-0f5ee92e2d63afc18" # Ubuntu 22.04 (update if needed)
  instance_type = "t2.micro"
  key_name      = var.key_name

  security_groups = ["my-sg"]

  user_data = file("user-data.sh")

  tags = {
    Name = "devops_landing_saas"
  }
}

resource "aws_security_group" "my-sg" {
  name        = "my-sg"
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
